# voxels

./: .gitmodules  CMakeLists.txt  README.md  devrun.sh
.cache/clangd/index/: buffer.cpp.372AA96A6153B657.idx  buffer.h.36FE065FE240D551.idx  camera.cpp.645B8BBB63D27F80.idx  camera.h.BB0EBD9D6E2C6FFE.idx  glad.c.E07E1EFFD5DD744E.idx  glad.h.E12E6F2B2521BD74.idx  glfw.h.14A2CA6F5C9BDB3C.idx  imconfig.h.9A8C847DCBC0FBED.idx  imgui.cpp.902BCB436CF56DC6.idx  imgui.h.AF3E20B0811AE41E.idx  imgui_demo.cpp.DCFBDD57559C753A.idx  imgui_draw.cpp.19E4CD0D03F4F450.idx  imgui_impl_glfw.cpp.48101C0FF8D35B66.idx  imgui_impl_glfw.h.7FA1535558046352.idx  imgui_impl_opengl3.cpp.FB494F023890A60D.idx  imgui_impl_opengl3.h.06134F9DC5911A65.idx  imgui_impl_opengl3_loader.h.D107703314C8DD29.idx  imgui_internal.h.89549C5B9CA17645.idx  imgui_tables.cpp.17494B1EF364C8DC.idx  imgui_widgets.cpp.91C1B6865D228017.idx  imstb_rectpack.h.54E78646CFEA1598.idx  imstb_textedit.h.BFCE35F7230AD044.idx  imstb_truetype.h.6FF5272CD2E0210D.idx  khrplatform.h.2368EF9A7D3175A3.idx  main.cpp.CA24982031812845.idx  object.cpp.9973557E8E832D2A.idx  object.h.A5883F5C408453C6.idx  renderer.cpp.46A9FB19150DABB9.idx  renderer.h.57E4782407DE2FC3.idx  shader.cpp.0F9883E0967C4C84.idx  shader.h.721AAA4EAC9C1F67.idx  stb_image.h.DDDDCF06EDFE3F95.idx  (+8 more)
include/KHR/: khrplatform.h
include/glad/: glad.h
res/shaders/: vertex.glsl  voxel.frag
src/: glad.c  main.cpp
src/render/: buffer.cpp  buffer.h  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  voxel.cpp  voxel.h
